@@ -1,0 +1,5 @@
+<registry>
+    <records interface="ftw.mail.interfaces.IMailSettings">
+        <value key="mail_domain">example.org</value>
+    </records>
+</registry>
